--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -14,6 +14,13 @@
 }
 
 @font-face {
+  font-family: 'SourceSansPro Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Georgia Regular'), url('../assets/fonts/SourceSansPro-Regular.woff') format('woff');
+}
+
+@font-face {
     font-family: 'Gilroy Regular';
     font-style: normal;
     font-weight: normal;
