--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -34,6 +34,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.5;
+  scroll-behavior: smooth;
 }
 .heading {
   font-family: "Gilroy Regular";
